[gd_scene load_steps=5 format=3 uid="uid://dallcl6brg1ya"]

[ext_resource type="Texture2D" uid="uid://b0fwk3t2vaic2" path="res://assets/sprites/items/orange.png" id="1_kb4gm"]
[ext_resource type="Script" path="res://scenes/receipt_list_item/receipt_list_item.gd" id="1_makuw"]
[ext_resource type="FontFile" uid="uid://mvkqagsi8xnd" path="res://assets/fonts/Bitmap Fonts/PPNeueBit-Bold.ttf" id="2_atsh5"]
[ext_resource type="FontFile" uid="uid://bx8d46um5g4ap" path="res://assets/fonts/Bitmap Fonts/PPNeueBit-Regular.ttf" id="3_uvugk"]

[node name="ReceiptListItem" type="VBoxContainer"]
offset_right = 306.0
offset_bottom = 283.0
theme_override_constants/separation = 20
script = ExtResource("1_makuw")

[node name="ItemIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_kb4gm")
expand_mode = 5
stretch_mode = 4

[node name="ItemNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_atsh5")
theme_override_font_sizes/font_size = 72
text = "Orange"

[node name="DiscountsApplied" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="DiscountsApplied"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_uvugk")
theme_override_font_sizes/font_size = 45
text = "discounts applied"

[node name="Control" type="Control" parent="DiscountsApplied"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiscountsAppliedLabel" type="Label" parent="DiscountsApplied"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_atsh5")
theme_override_font_sizes/font_size = 45
text = "No"

[node name="BasePrice" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="BasePrice"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_uvugk")
theme_override_font_sizes/font_size = 45
text = "base price"

[node name="Control" type="Control" parent="BasePrice"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BasePriceLabel" type="Label" parent="BasePrice"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_uvugk")
theme_override_font_sizes/font_size = 45
text = "$10.00"

[node name="LineItems" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="FinalPrice" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FinalPrice"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_atsh5")
theme_override_font_sizes/font_size = 45
text = "final price"

[node name="Control" type="Control" parent="FinalPrice"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FinalPriceLabel" type="Label" parent="FinalPrice"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_atsh5")
theme_override_font_sizes/font_size = 45
text = "$10.00"
